<resources>
    <string name="app_name">Melisma</string>
    <string name="trending_header">Today\'s Music is</string>
    <string name="search_track">Search…</string>
    <string name="no_connection_message">No internet connection</string>
    <string name="no_file_message">File not found</string>
    <string name="service_is_unavailable">Service is unavailable</string>
    <string name="no_element">"No tracks found"</string>
    <string name="top_200_recommendations">Top 200 Recommendations</string>
    <string name="bad_gatawey_message">Bad Gateway</string>
    <string name="server_error_message">Server error, try later</string>
    <string name="too_many_requests">Too Many Requests</string>
    <string name="not_found">Not Found</string>
    <string name="forbidenn">Forbidden Request</string>
    <string name="bad_request">Bad Request</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="no_content">No Content</string>
    <string name="accepted_message">The request has been accepted for processing, but the processing has not been completed</string>
    <string name="no_favorite_tracks">No tracks</string>
    <string name="no_favorite_playlists">No playlists</string>
    <string name="by_name">Name</string>
    <string name="by_time">Time</string>
    <string name="by_artist">Artist</string>
    <string name="success_add_message">Successfully added!</string>
    <string name="success_replace_message">Successfully replaced!</string>
    <string name="success_remove_message">Successfully removed!</string>
    <string name="success_edit_message">Successfully edited!</string>
    <string name="success_create_message">Successfully created!</string>
    <string name="success_followed_message">Successfully followed!</string>
    <string name="yes_btn_text">Yes</string>
    <string name="update_btn_text">Update</string>
    <string name="no_btn_text">No</string>
    <string name="later_btn_text">Later</string>
    <string name="dublicated_track_message">"You tracks already contains this track. Still add it?"</string>
    <string name="delete_track_confirm_message">"Are you sure that you want to delete this track?"</string>
    <string name="delete_track_from_playlist_confirm_message">"Are you sure that you want to delete this track from playlist?"</string>
    <string name="delete_track_player_menu_confirm_message">"Are you sure that you want to delete this track? "</string>
    <string name="clear_search_history_confirm_message">"Are you sure that you want to clear search history?"</string>
    <string name="current_queue">Current queue</string>
    <string name="update_notif_channel_name">Updates</string>
    <string name="new_version">New version:&#160;</string>
    <string name="load_update">Update is loading… </string>
    <string name="caching_started">Caching started</string>
    <string name="download_error">Error with downloading</string>
    <string name="loading_update_error">Loading checking error</string>
    <string name="empty_url_error">Download url is empty</string>
    <string name="oops_something_went_wrong_data">Oops, something went wrong</string>
    <string name="nothing_found_message">Nothing found</string>
    <string name="search_history">Search history</string>
    <string name="clear">Clear</string>
    <string name="successfully_cleared">History successfully cleared</string>
    <string name="tracks_success_deelted">Tacks successfully deleted</string>
    <string name="the_history_is_empty">The history is empty</string>
    <string name="favorites_songs">My Tracks</string>
    <string name="favorites_playlists">My Playlists</string>
    <string name="results">Results</string>
    <string name="shuffle">Shuffle</string>
    <string name="tracks">&#160;tracks</string>
    <string name="phone_or_email">Phone or email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="unavailable_track">Track is unavailable</string>
    <string name="divider_dot">&#160;·&#160;</string>
    <string name="delete_option">Delete</string>
    <string name="edit_option">Edit</string>
    <string name="add_option">Add</string>
    <string name="empty_input">You haven`t entered anything</string>
    <string name="not_contain_this_track">You tracks not contains this track</string>
    <string name="cant_re_add">Due to the features of the VK server, you will not be able to re-add track through this menu after it was or will be deleted.\n\nYou can find and add from search or using other ways. Sorry one more time, but we can`t do anything with that.</string>
    <string name="cant_delete">Due to the features of the VK server, you will not be able to delete new track from that menu.\n\nYou can find and delete it from your tracks page by swipe. Sorry one more time, but we can`t do anything with that.</string>
    <string name="warning_title">Warning!</string>
    <string name="ok">OK</string>
    <string name="player">Player</string>
    <string name="login_with_vk">Use VKontakte account</string>
    <string name="start_time">00:00</string>
    <string name="new_playlist">New playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="enter_playlist_title">Enter playlist title…</string>
    <string name="description">Description</string>
    <string name="enter_playlist_description">Enter playlist description…</string>
    <string name="add_tracks">Add tracks</string>
    <string name="select">Select</string>
    <string name="select_tracks">Select tracks</string>
    <string name="select_playlist">Select playlist</string>
    <string name="dont_live_empty">Please don`t live this field empty!</string>
    <string name="download">Download</string>
    <string name="remove_from_downloads">Remove from downloads</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_playlist_message">Are you sure that you want to delete this playlist?</string>
    <string name="the_action_is_prohibited">The action is prohibited</string>
    <string name="the_album_is_full">The album is full</string>
    <string name="access_to_community_is_denied">Access to community is denied</string>
    <string name="access_to_audio_is_denied">Access to audio is denied</string>
    <string name="access_to_album_is_denied">Access to album is denied</string>
    <string name="wrong_timestamp">Wrong timestamp</string>
    <string name="wrong_user_id">Wrong user id</string>
    <string name="wrong_app_id">Wrong app id</string>
    <string name="wrong_paramenter">Wrong paramenter</string>
    <string name="private_profile">Private profile</string>
    <string name="too_many_requests_try_again_later">Too many requests try again later</string>
    <string name="app_access_key_is_invalid">App access key is invalid</string>
    <string name="community_acess_key_is_invalid">Community acess key is invalid</string>
    <string name="confirmation_from_the_user_is_required">Confirmation from the user is required</string>
    <string name="the_method_was_disabled">The method was disabled</string>
    <string name="this_action_is_allowed_only_for_standalone_and_open_api_apps">This action is allowed only for Standalone and Open API apps</string>
    <string name="this_action_is_prohibited_for_non_standalone_apps">This action is prohibited for non-Standalone apps.</string>
    <string name="the_page_has_been_deleted_or_blocked">The page has been deleted or blocked</string>
    <string name="user_validation_required">User validation required</string>
    <string name="requests_over_https_are_required">Requests over HTTPS are required</string>
    <string name="access_is_denied">Access is denied</string>
    <string name="you_need_to_enter_captcha">You need to enter captcha</string>
    <string name="user_not_logged_in_or_app_is_disabled_by_developer">User not logged in or app is disabled by developer</string>
    <string name="internal_server_error">Server error</string>
    <string name="there_are_too_many_similar_actions">There are too many similar actions</string>
    <string name="wrong_request">Wrong request</string>
    <string name="no_rights_to_perform_this_action">No rights to perform this action</string>
    <string name="too_many_requests_per_second">Too many requests per second</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="invalid_signature">Invalid signature</string>
    <string name="unknown_page">Unknown page</string>
    <string name="app_is_disabled_by_developer">App is disabled by developer</string>
    <string name="unknown_error_try_again_later">Unknown error, try again later</string>
    <string name="sort_by">Sort by:</string>
    <string name="bad_connection_quality">Bad connection quality</string>
    <string name="submit">Submit</string>
    <string name="enter_symbols_from_image">Enter symbols from image</string>
    <string name="empty_string" />
    <string name="fail_to_load_captcha">Fail to load captcha</string>
    <string name="dash">&#160;-&#160;</string>
    <string name="copied">Copied:&#160;</string>
    <string name="no_description">No description</string>
    <string name="update_channel_name">Update</string>
    <string name="cache_track_channel_name">Cache tracks</string>
    <string name="successfully_downloaded">Successfully downloaded</string>
    <string name="fail_to_download">Fail to download</string>
    <string name="fail_to_delete">Fail to delete</string>
    <string name="preparing_for_download">Preparing for download</string>
    <string name="tab_playlists_title">Playlists</string>
    <string name="tab_tracks_title">Tracks</string>
    <string name="playlist_already_followed">Playlist already followed</string>
    <string name="friends_title">Friends</string>
    <string name="no_friends">No friends</string>
    <string name="notifications">Notifications</string>
    <string name="update_info">
        - Fixed incorrect navigation: when you return from the search screen to the screen of your tracks
            instead of the search history on android 7-9\n
        - Changed the menu on the screen of my tracks: now it includes sorting and the ability to open
            playlist screen
    </string>
    <string name="update_title">Update 1.4.2-betta</string>
    <string name="update_date">01.12.2023</string>
    <string name="update_version">21</string>
    <string name="please_give_notification_permission_to_make_function_app_properly">Please give notification permission to make app function properly</string>
    <string name="please_give_permission">Please give permission</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="popular">Popular</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="logout">Logout</string>
    <string name="settings_title">Settings</string>
    <string name="queue">Queue:</string>
    <string name="downloaing">Downloading</string>
    <string name="track_not_found_in_downlodas">Track not found in downloads</string>
    <string name="downloads_folder_path">Downloads folder path</string>
    <string name="logout_dialog_message">Are you sure that you want to logout from current account?</string>
    <string name="delete_downloaded_dialog_message">Are you sure that you want to delete all downloaded tracks?</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="_15_min">15 min</string>
    <string name="_30_min">30 min</string>
    <string name="_1_hour">1 hour</string>
    <string name="_2_hour">2 hour</string>
    <string name="disable">Disable</string>
    <string name="sort">Sorting</string>
</resources>