<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/authScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/login"
            />

        <TextView
            android:textColor="#776e45"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_vk"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/h1"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/phone_or_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textEmailAddress"
                android:id="@+id/login_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textPassword"
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/gray"
                android:textSize="@dimen/body2"
                android:id="@+id/create_account"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                />

            <TextView
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/gray"
                android:textSize="@dimen/body2"
                android:id="@+id/forgot_password"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                />
        </FrameLayout>

        <TextView
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body1"
            android:textColor="@color/red"
            android:id="@+id/errorTvAuth"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/authProgress"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            app:lottie_fileName="loading.json"
            app:layout_constraintTop_toBottomOf="@id/back_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:visibility="gone"
            android:layout_gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/h3"
            android:paddingVertical="10dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/orange"
            />
    </LinearLayout>
</ScrollView>