<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/login_pic"
        />
    
    <TextView
        android:textColor="#776e45"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_vk"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/h1"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:hint="@string/phone_or_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:id="@+id/login_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

   <ProgressBar
       android:visibility="gone"
       android:id="@+id/authProgress"
       android:layout_marginTop="20dp"
       android:indeterminateTint="@color/orange"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/body1"
        android:textColor="@color/red"
        android:id="@+id/errorTvAuth"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/h3"
        android:paddingVertical="10dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/orange"
        />
</LinearLayout>
</ScrollView>