<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/nestedSroll"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/left_chevron"
        android:tint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/titleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTv" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintEnd_toStartOf="@id/saveBtn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/new_playlist"
        android:textColor="@color/black"
        android:textSize="@dimen/h3"
        android:textStyle="bold"
        />

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/black"
        app:icon="@drawable/check"
        app:iconTint="@color/orange"
        app:iconSize="20dp"
        app:iconPadding="10dp"
        android:text="@string/save"
        android:textSize="@dimen/body1"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="@+id/titleTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleTv"
        app:layout_constraintTop_toTopOf="@+id/titleTv" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        app:lottie_fileName="loading.json"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="@dimen/body1"
        android:text="@string/title"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:id="@+id/title_edit_text"
            android:hint="@string/enter_playlist_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/body1"
            android:textColorHighlight="@color/orange"
            android:textColorHint="@color/gray"
            android:textColorLink="@color/orange"
            android:textCursorDrawable="@drawable/cursor_drawable"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="@dimen/body1"
        android:text="@string/description"
        android:textStyle="bold"
        android:paddingHorizontal="15dp"
        android:id="@+id/descriptionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintEnabled="false"
        app:boxBackgroundMode="none"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:hint="@string/enter_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="@dimen/body1"
            android:inputType="textMultiLine"
            android:textColorHighlight="@color/orange"
            android:textColorHint="@color/gray"
            android:textColorLink="@color/orange"
            android:textCursorDrawable="@drawable/cursor_drawable"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTracksBtn"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/orange"
        android:text="@string/add_tracks"
        android:textSize="@dimen/body1"
        app:icon="@drawable/plus"
        app:iconSize="20dp"
        app:iconTint="@color/orange"
        app:iconPadding="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="visible"
        android:id="@+id/selectedTracksRcv"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addTracksBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/track_item"
        android:paddingBottom="140dp"
        android:clipToPadding="false"
        />

    <include
        app:layout_constraintTop_toBottomOf="@id/selectedTracksRcv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/error"
        layout="@layout/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>